--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </li>
           <li class="nav-item nav-profile dropdown mr-4">
             <a class="nav-link dropdown-toggle" href="#">
-              <img class="border border" src="./images/p3.png" alt="profile" />
+              <img class="border border border-success" src="./images/p3.png" alt="profile" />
             </a>
           </li>
           <li class="nav-item nav-settings d-none d-lg-flex ">
