graph error fixed

--- a/humidity.html
+++ b/humidity.html
@@ -253,16 +253,8 @@
   for(var y=1; y<=humidity.length; y++){
     lab.push(y);
   }
-  }
 
-  var humidity = [];
-  var lab = [];
-
-  const app = initializeApp(firebaseConfig);
-  const db = getFirestore(app);
-  getData(db)
-  'use strict';
-        var data = {
+  var data = {
           labels: lab,
           datasets: [{
             label: '# of humidity',
@@ -308,7 +300,7 @@
         };
 
 
-        if ($("#barChart").length) {
+  if ($("#barChart").length) {
           var barChartCanvas = $("#barChart").get(0).getContext("2d");
           var barChart = new Chart(barChartCanvas, {
             type: 'bar',
@@ -325,6 +317,79 @@
             options: options
           });
         }
+
+
+  }
+
+  var humidity = [];
+  var lab = [];
+
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
+  getData(db)
+        // var data = {
+        //   labels: lab,
+        //   datasets: [{
+        //     label: '# of humidity',
+        //     data: humidity,
+        //     backgroundColor: [
+        //       'rgba(255, 99, 132, 0.2)',
+        //       'rgba(54, 162, 235, 0.2)',
+        //       'rgba(255, 206, 86, 0.2)',
+        //       'rgba(75, 192, 192, 0.2)',
+        //       'rgba(153, 102, 255, 0.2)',
+        //       'rgba(255, 159, 64, 0.2)'
+        //     ],
+        //     borderColor: [
+        //       'rgba(255,99,132,1)',
+        //       'rgba(54, 162, 235, 1)',
+        //       'rgba(255, 206, 86, 1)',
+        //       'rgba(75, 192, 192, 1)',
+        //       'rgba(153, 102, 255, 1)',
+        //       'rgba(255, 159, 64, 1)'
+        //     ],
+        //     borderWidth: 1,
+        //     fill: false
+        //   }]
+        // };
+        
+        // var options = {
+        //   scales: {
+        //     yAxes: [{
+        //       ticks: {
+        //         beginAtZero: true
+        //       }
+        //     }]
+        //   },
+        //   legend: {
+        //     display: false
+        //   },
+        //   elements: {
+        //     point: {
+        //       radius: 0
+        //     }
+        //   }
+
+        // };
+
+
+        // if ($("#barChart").length) {
+        //   var barChartCanvas = $("#barChart").get(0).getContext("2d");
+        //   var barChart = new Chart(barChartCanvas, {
+        //     type: 'bar',
+        //     data: data,
+        //     options: options
+        //   });
+        // }
+
+        // if ($("#lineChart").delay(1000).length) {
+        //   var lineChartCanvas = $("#lineChart").get(0).getContext("2d");
+        //   var lineChart = new Chart(lineChartCanvas, {
+        //     type: 'line',
+        //     data: data,
+        //     options: options
+        //   });
+        // }
 
 
     </script>
