--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <!-- partial:partials/_navbar.html -->
     <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
       <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-        <a class="navbar-brand brand-logo mr-5" href="index.html"><img src="images/logo.png"  class="mr-2"
-            alt="logo" style="transform: scale(1.7);"/></a>
+        <a class="navbar-brand brand-logo mr-5" href="index.html"><img src="images/logo.png" class="mr-2" alt="logo"
+            style="transform: scale(1.7);" /></a>
         <a class="navbar-brand brand-logo-mini" href="index.html"><img src="images/logo-mini.png" alt="logo" /></a>
       </div>
       <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
@@ -96,14 +96,14 @@
               <span class="menu-title">Add Data</span>
             </a>
           </li>
-          
+
           <li class="nav-item">
             <a class="nav-link" href="./about_us.html">
               <i class="icon-paper menu-icon"></i>
               <span class="menu-title">About Us</span>
             </a>
           </li>
-          
+
 
         </ul>
       </nav>
@@ -526,19 +526,12 @@
 
 //-----------------------------------------------------------------
 
-
-
-
     }
-
-
 
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
     getData(db)
   </script>
-
-
 
   <script>
     $("#today-date").html(new Date().toLocaleDateString())
