--- a/humidity.html
+++ b/humidity.html
@@ -27,8 +27,8 @@
     <!-- partial:partials/_navbar.html -->
     <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
       <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-        <a class="navbar-brand brand-logo mr-5 p-2" href="index.html"><img src="images/logo.png" class="mr-2"
-            alt="logo" style="transform: scale(1.7);" /></a>
+        <a class="navbar-brand brand-logo mr-5 p-2" href="index.html"><img src="images/logo.png" class="mr-2" alt="logo"
+            style="transform: scale(1.7);" /></a>
         <a class="navbar-brand brand-logo-mini" href="index.html"><img src="images/logo-mini.png" alt="logo" /></a>
       </div>
       <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
@@ -124,8 +124,8 @@
 
 
 
-          <div class="row">
-            <div class="col-lg-8 grid-margin stretch-card">
+          <div class="row m-2">
+            <div class="col-md-8 grid-margin stretch-card order-md-1  order-2 ">
               <div class="card">
                 <div class="card-body">
                   <div class="chartjs-size-monitor">
@@ -142,16 +142,19 @@
                 </div>
               </div>
             </div>
-            <div class="col-4">
+
+            <div class="col-md-4 order-md-2 order-1">
               <div class="card">
                 <div class="card-body">
-
                   Line Chart details
                 </div>
               </div>
             </div>
 
-            <div class="col-4">
+          </div>
+
+          <div class="row m-2">
+            <div class="col-md-4">
               <div class="card">
                 <div class="card-body">
 
@@ -159,7 +162,8 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-8 grid-margin stretch-card">
+
+            <div class="col-md-8 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
                   <div class="chartjs-size-monitor">
@@ -176,6 +180,7 @@
                 </div>
               </div>
             </div>
+
           </div>
 
 
@@ -327,70 +332,6 @@
   const app = initializeApp(firebaseConfig);
   const db = getFirestore(app);
   getData(db)
-        // var data = {
-        //   labels: lab,
-        //   datasets: [{
-        //     label: '# of humidity',
-        //     data: humidity,
-        //     backgroundColor: [
-        //       'rgba(255, 99, 132, 0.2)',
-        //       'rgba(54, 162, 235, 0.2)',
-        //       'rgba(255, 206, 86, 0.2)',
-        //       'rgba(75, 192, 192, 0.2)',
-        //       'rgba(153, 102, 255, 0.2)',
-        //       'rgba(255, 159, 64, 0.2)'
-        //     ],
-        //     borderColor: [
-        //       'rgba(255,99,132,1)',
-        //       'rgba(54, 162, 235, 1)',
-        //       'rgba(255, 206, 86, 1)',
-        //       'rgba(75, 192, 192, 1)',
-        //       'rgba(153, 102, 255, 1)',
-        //       'rgba(255, 159, 64, 1)'
-        //     ],
-        //     borderWidth: 1,
-        //     fill: false
-        //   }]
-        // };
-        
-        // var options = {
-        //   scales: {
-        //     yAxes: [{
-        //       ticks: {
-        //         beginAtZero: true
-        //       }
-        //     }]
-        //   },
-        //   legend: {
-        //     display: false
-        //   },
-        //   elements: {
-        //     point: {
-        //       radius: 0
-        //     }
-        //   }
-
-        // };
-
-
-        // if ($("#barChart").length) {
-        //   var barChartCanvas = $("#barChart").get(0).getContext("2d");
-        //   var barChart = new Chart(barChartCanvas, {
-        //     type: 'bar',
-        //     data: data,
-        //     options: options
-        //   });
-        // }
-
-        // if ($("#lineChart").delay(1000).length) {
-        //   var lineChartCanvas = $("#lineChart").get(0).getContext("2d");
-        //   var lineChart = new Chart(lineChartCanvas, {
-        //     type: 'line',
-        //     data: data,
-        //     options: options
-        //   });
-        // }
-
 
     </script>
 
