--- a/moisture.html
+++ b/moisture.html
@@ -124,8 +124,8 @@
 
 
 
-          <div class="row">
-            <div class="col-lg-8 grid-margin stretch-card">
+          <div class="row m-2">
+            <div class="col-md-8 grid-margin stretch-card  order-md-1 order-2  ">
               <div class="card">
                 <div class="card-body">
                   <div class="chartjs-size-monitor">
@@ -142,7 +142,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-4">
+            <div class="col-md-4 order-md-2 order-1">
               <div class="card">
                 <div class="card-body">
 
@@ -151,7 +151,10 @@
               </div>
             </div>
 
-            <div class="col-4">
+          </div>
+          <div class="row m-2 ">
+
+            <div class="col-md-4 ">
               <div class="card">
                 <div class="card-body">
 
@@ -159,7 +162,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-8 grid-margin stretch-card">
+            <div class="col-md-8 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
                   <div class="chartjs-size-monitor">
