--- a/temperature.html
+++ b/temperature.html
@@ -27,8 +27,8 @@
     <!-- partial:partials/_navbar.html -->
     <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
       <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-        <a class="navbar-brand brand-logo mr-5" href="index.html"><img src="images/logo.png" class="mr-2"
-            alt="logo"style="transform: scale(1.7);" /></a>
+        <a class="navbar-brand brand-logo mr-5" href="index.html"><img src="images/logo.png" class="mr-2" alt="logo"
+            style="transform: scale(1.7);" /></a>
         <a class="navbar-brand brand-logo-mini" href="index.html"><img src="images/logo-mini.png" alt="logo" /></a>
       </div>
       <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
@@ -124,8 +124,8 @@
 
 
 
-          <div class="row">
-            <div class="col-lg-8 grid-margin stretch-card">
+          <div class="row m-2">
+            <div class="col-md-8 grid-margin stretch-card order-md-1 order-2 ">
               <div class="card">
                 <div class="card-body">
                   <div class="chartjs-size-monitor">
@@ -142,7 +142,8 @@
                 </div>
               </div>
             </div>
-            <div class="col-4">
+
+            <div class="col-md-4 order-md-2 order-1">
               <div class="card">
                 <div class="card-body">
 
@@ -151,7 +152,11 @@
               </div>
             </div>
 
-            <div class="col-4">
+
+          </div>
+          <div class="row m-2 ">
+
+            <div class="col-md-4">
               <div class="card">
                 <div class="card-body">
 
@@ -159,7 +164,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-8 grid-margin stretch-card">
+            <div class="col-md-8 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
                   <div class="chartjs-size-monitor">
