--- a/moisture.html
+++ b/moisture.html
@@ -20,6 +20,23 @@
   <link rel="stylesheet" href="css/vertical-layout-light/style.css">
   <!-- endinject -->
   <link rel="shortcut icon" href="images/favicon.png" />
+  <style>
+    @media (max-width: 767px) {
+      .disable-padding {
+        padding: 0.2em 0.2em !important;
+      }
+
+      .enable-padding {
+        padding: 1.4em 1.4em !important;
+
+      }
+
+      .enable-margin {
+        margin: 8px 0px;
+      }
+
+    }
+  </style>
 </head>
 
 <body>
@@ -27,8 +44,8 @@
     <!-- partial:partials/_navbar.html -->
     <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
       <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-        <a class="navbar-brand brand-logo mr-5" href="index.html"><img src="images/logo.png" class="mr-2"
-            alt="logo" style="transform: scale(1.7);"/></a>
+        <a class="navbar-brand brand-logo mr-5" href="index.html"><img src="images/logo.png" class="mr-2" alt="logo"
+            style="transform: scale(1.7);" /></a>
         <a class="navbar-brand brand-logo-mini" href="index.html"><img src="images/logo-mini.png" alt="logo" /></a>
       </div>
       <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
@@ -109,8 +126,8 @@
       </nav>
       <!-- partial -->
       <div class="main-panel">
-        <div class="content-wrapper">
-          <div class="row">
+        <div class="content-wrapper disable-padding">
+          <div class="row enable-padding">
             <div class="col-md-12 grid-margin">
               <div class="row">
                 <div class="col-12 col-xl-8 mb-4 mb-xl-0">
@@ -142,7 +159,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4 order-md-2 order-1">
+            <div class="col-md-4 order-md-2 order-1 enable-margin">
               <div class="card">
                 <div class="card-body">
 
@@ -154,7 +171,7 @@
           </div>
           <div class="row m-2 ">
 
-            <div class="col-md-4 ">
+            <div class="col-md-4 enable-margin">
               <div class="card">
                 <div class="card-body">
 
